Wrong collapsing border resolution on RTL table cells https://bugs.webkit.org/show_bug.cgi?id=79272

This change makes us abide by 'direction' on cells - we were
artificially ignoring it. Most ofthe scaffolding code was introduced
in previous refactorings and we just had to pipe it through.

This is a revival of Julien Chaffraix <jchaffraix@webkit.org> patch in
https://bug-79272-attachments.webkit.org/attachment.cgi?id=172290

* LayoutTests/fast/table/border-collapsing/table-rtl-row-mixed-direction-expected.html:
* LayoutTests/fast/table/border-collapsing/table-rtl-row-mixed-direction.html:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::localRectsForRepaint const):
(WebCore::RenderTableCell::computeCollapsedStartBorder const):
(WebCore::RenderTableCell::computeCollapsedEndBorder const):
(WebCore::RenderTableCell::computeCollapsedBeforeBorder const):
(WebCore::RenderTableCell::computeCollapsedAfterBorder const):
(WebCore::RenderTableCell::cachedCollapsedLeftBorder const):
(WebCore::RenderTableCell::cachedCollapsedRightBorder const):
(WebCore::RenderTableCell::cachedCollapsedTopBorder const):
(WebCore::RenderTableCell::cachedCollapsedBottomBorder const):
(WebCore::RenderTableCell::borderHalfLeft const):
(WebCore::RenderTableCell::borderHalfRight const):
(WebCore::RenderTableCell::borderHalfTop const):
(WebCore::RenderTableCell::borderHalfBottom const):
(WebCore::RenderTableCell::borderHalfStart const):
(WebCore::RenderTableCell::borderHalfEnd const):
(WebCore::RenderTableCell::borderHalfBefore const):
(WebCore::RenderTableCell::borderHalfAfter const):
(WebCore::RenderTableCell::paintCollapsedBorders):
* Source/WebCore/rendering/RenderTableCell.h:
* Source/WebCore/rendering/RenderTableCellInlines.h:
(WebCore::RenderTableCell::borderAdjoiningCellAfter):
(WebCore::RenderTableCell::borderAdjoiningCellBefore):
* Source/WebCore/rendering/RenderTableRow.cpp:
(WebCore::RenderTableRow::borderAdjoiningStartCell const):
(WebCore::RenderTableRow::borderAdjoiningEndCell const):